--- a/navlink.css
+++ b/navlink.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 .navbar .nav-item .active {
-    color: #fff; 
-    border-bottom: #ffd500;
+    color: #00a8e8; 
+    border-bottom: #008000;
     border-width: 2px;
     border-top: transparent;
     border-left: transparent;
@@ -12,6 +13,61 @@
   }
 
   .navbar .nav-item .nav-link {
-    color: #fff; 
-
+    color: #008000; 
+   
   }
+
+  .navbar {
+    box-shadow: 0 3px 5px rgba(5, 74, 41, 0.5);
+  }
+
+
+@media (max-width: 768px) {
+  .carousel-item h5 {
+    font-size: 1.2rem; 
+  }
+
+  .first_col {
+    position: initial;
+    left: 0 !important;
+}
+
+.sec_col {
+    order: 1 !important;
+}
+}
+
+/* contact form */
+
+.first_col {
+    background-color: white;
+    height:max-content;
+    box-shadow: 0 3px 5px rgba(5, 74, 41, 0.5);
+    width: 550px;
+    left: 155px;
+    top: 171px;
+ 
+}
+
+.img-fluid {
+  box-shadow: 0 3px 5px rgba(5, 74, 41, 0.5);
+}
+
+.btn-primary {
+    background-color: #054a29;
+    border: #054a29;
+
+}
+
+.form-control {
+    height: 52px;
+    background: #fff;
+    font-size: 14px;
+    border-radius: 2px;
+    box-shadow: 0 3px 5px rgba(5, 74, 41, 0.5);
+    border: 1px solid #054a29;
+}
+.form-control[type=text]:focus {
+border: 2px solid #00a8e8;
+}
+
