--- a/gallery.css
+++ b/gallery.css
@@ -1,66 +1,75 @@
 
-.gallery{
-  min-height: 100vh;
-  background: whitesmoke;
-  padding-bottom: 100px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
+.navbar .nav-item .active {
+    color: #00a8e8; 
+    border-bottom: #008000;
+    border-width: 2px;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    border-style: solid;
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .navbar .nav-item .nav-link {
+    color: #008000; 
+   
+  }
+
+  .navbar {
+    box-shadow: 0 3px 5px rgba(5, 74, 41, 0.5);
+  }
+
+  .gallery {
+    position: relative;
+    width: 200px;
+    height: 300px;
+    transform-style: preserve-3d;
+    animation: animate 20s linear infinite;
+    margin: 0 auto; /* Centers the element horizontally */
+  }
+  
+
+.gallery:hover{
+  animation-play-state: paused;
 }
 
-.gallery .controls{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding:20px 0;
-  list-style: none;
+
+@keyframes animate {
+  0%{
+      transform: perspective(1000px) rotateY(0deg);
+  }
+  100%{
+      transform: perspective(1000px) rotateY(360deg);
+  }
 }
 
-.gallery .controls .buttons{
-  height:40px;
-  width: 140px;
-  background:#fff;
-  border-radius: 25px;
-  color:#008000;
-  border-color:#3a86ff;
-  font-size: 20px;
-  line-height: 40px;
-  cursor: pointer;
-  margin:20px;
-  box-shadow: 0 3px 5px rgba(58, 134, 255, 0.3);
-  text-align: center;
-}
-
-.gallery .controls .buttons.active{
-  border-color:#3a86ff;
-  border-style: solid;
-  color:#3a86ff;
-  font-size: 20px;
-  border-radius: 25px;
-  border-width: 2px;
-}
-
-.gallery .image-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.gallery .image-container .image{
-  height:250px;
-  width: 350px;
-  overflow: hidden;
-  border:15px solid #fff;
-  box-shadow: 0 3px 5px rgba(58, 134, 255, 0.3);
-  margin: 20px;
-}
-
-.gallery .image-container .image img{
+.gallery span{
+  position: absolute;
+  width: 100%;
   height: 100%;
-  width:100%;
-  object-fit: cover;
+  transform-origin: center;
+  transform-style: preserve-3d;
+  transform: rotateY(calc(var(--i) * 36deg)) translateZ(400px);
+  -webkit-box-reflect: below 2px linear-gradient(transparent, transparent, rgba(4, 4, 4, 0.267));
 }
 
-.gallery .image-container .image:hover img{
-  transform: scale(1.4);
+
+
+.gallery span img {
+  position: relative;
+  width: 100%;
+  height: 80%;
+  transition: 0.5s;
+  border-radius: 15px;
+  border: 3px solid #054a29;
+  box-shadow: 0 3px 35px rgba(5, 74, 41, 0.5);
 }
 
+
+img:hover{
+  transform: translateY(-2px);
+  
+}
