--- a/navlink.css
+++ b/navlink.css
@@ -59,6 +59,8 @@
 
 }
 
+
+
 .form-control {
     height: 52px;
     background: #fff;
@@ -70,4 +72,15 @@
 .form-control[type=text]:focus {
 border: 2px solid #00a8e8;
 }
+
+/* CSS for the Login Modal */
+.modal {
+  z-index: 1050; /* Adjust this value as needed */
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+
+.modal-backdrop {
+  display: none; /* Hide the backdrop */
+}
+
 
